--- a/src/components/alg/alg-cf/rounds/pages/elem-44-sko2.html
+++ b/src/components/alg/alg-cf/rounds/pages/elem-44-sko2.html
@@ -7,125 +7,114 @@
 <article class="article">
   <h2>Содержание</h2>
 
-      <a href="#task1">Задача A. Золотая осень</a>
-  <br><a href="#task2">Задача B. Кола</a>
-  <br><a href="#task3">Задача C. Каникулы</a>
-  <br><a href="#task4">Задача D. Гипердвигатель</a>
-  <br><a href="#task5">Задача E. Обезьянка Анфиса</a>
-  <br><a href="#task6">Задача F. BerPaint</a>
-  <br><a href="#task7">Задача G. Тир</a>
-  <br><a href="#task8">Задача H. Номер телефона</a>
-  <br><a href="#task9">Задача I. Игрушки</a>
-  <br><a href="#task10">Задача J. Триминошки</a>
+      <a href="#t1">Задача A. Золотая осень</a>
+  <br><a href="#t2">Задача B. Кола</a>
+  <br><a href="#t3">Задача C. Каникулы</a>
+  <br><a href="#t4">Задача D. Гипердвигатель</a>
+  <br><a href="#t5">Задача E. Обезьянка Анфиса</a>
+  <br><a href="#t6">Задача F. BerPaint</a>
+  <br><a href="#t7">Задача G. Тир</a>
+  <br><a href="#t8">Задача H. Номер телефона</a>
+  <br><a href="#t9">Задача I. Игрушки</a>
+  <br><a href="#t10">Задача J. Триминошки</a>
 </article>
 
 
 <!-- Задача A. Золотая осень -->
 <article class="article">
-  <div class="anchor" id="task1"></div>
+  <div class="anchor" id="t1"></div>
   <h3>Задача A. Золотая осень</h3>
 
-  <div><i>Ограничение по времени 2с
-  <br>Ограничение по памяти 256мб</i></div>
+  <div class="t1"></div>
 
 </article>
 
 
 <!-- Задача B. Кола -->
 <article class="article">
-  <div class="anchor" id="task2"></div>
+  <div class="anchor" id="t2"></div>
   <h3>Задача B. Кола</h3>
 
-  <div><i>Ограничение по времени 2с
-  <br>Ограничение по памяти 256мб</i></div>
+  <div class="t2"></div>
 
 </article>
 
 
 <!-- Задача C. Каникулы -->
 <article class="article">
-  <div class="anchor" id="task3"></div>
+  <div class="anchor" id="t3"></div>
   <h3>Задача C. Каникулы</h3>
 
-  <div><i>Ограничение по времени 2с
-  <br>Ограничение по памяти 256мб</i></div>
+  <div class="t3"></div>
 
 </article>
 
 
 <!-- Задача D. Гипердвигатель -->
 <article class="article">
-  <div class="anchor" id="task4"></div>
+  <div class="anchor" id="t4"></div>
   <h3>Задача D. Гипердвигатель</h3>
 
-  <div><i>Ограничение по времени 2с
-  <br>Ограничение по памяти 256мб</i></div>
+  <div class="t4"></div>
 
 </article>
 
 
 <!-- Задача E. Обезьянка Анфиса -->
 <article class="article">
-  <div class="anchor" id="task5"></div>
+  <div class="anchor" id="t5"></div>
   <h3>Задача E. Обезьянка Анфиса</h3>
 
-  <div><i>Ограничение по времени 2с
-  <br>Ограничение по памяти 256мб</i></div>
+  <div class="t5"></div>
 
 </article>
 
 
 <!-- Задача F. BerPaint -->
 <article class="article">
-  <div class="anchor" id="task6"></div>
+  <div class="anchor" id="t6"></div>
   <h3>Задача F. BerPaint</h3>
 
-  <div><i>Ограничение по времени 5с
-  <br>Ограничение по памяти 256мб</i></div>
+  <div class="t6"></div>
 
 </article>
 
 
 <!-- Задача G. Тир -->
 <article class="article">
-  <div class="anchor" id="task7"></div>
+  <div class="anchor" id="t7"></div>
   <h3>Задача G. Тир</h3>
 
-  <div><i>Ограничение по времени 5с
-  <br>Ограничение по памяти 256мб</i></div>
+  <div class="t7"></div>
 
 </article>
 
 
 <!-- Задача H. Номер телефона -->
 <article class="article">
-  <div class="anchor" id="task8"></div>
+  <div class="anchor" id="t8"></div>
   <h3>Задача H. Номер телефона</h3>
 
-  <div><i>Ограничение по времени 2с
-  <br>Ограничение по памяти 256мб</i></div>
+  <div class="t8"></div>
 
 </article>
 
 
 <!-- Задача I. Игрушки -->
 <article class="article">
-  <div class="anchor" id="task9"></div>
+  <div class="anchor" id="t9"></div>
   <h3>Задача I. Игрушки</h3>
 
-  <div><i>Ограничение по времени 5с
-  <br>Ограничение по памяти 256мб</i></div>
+  <div class="t9"></div>
 
 </article>
 
 
 <!-- Задача J. Триминошки -->
 <article class="article">
-  <div class="anchor" id="task10"></div>
+  <div class="anchor" id="t10"></div>
   <h3>Задача J. Триминошки</h3>
 
-  <div><i>Ограничение по времени 2с
-  <br>Ограничение по памяти 256мб</i></div>
+  <div class="t10"></div>
 
 </article>
-
