--- a/src/components/alg/alg-cf/yargu1/pages/elem-sp3.html
+++ b/src/components/alg/alg-cf/yargu1/pages/elem-sp3.html
@@ -23,21 +23,21 @@
     <br><a href="#p3">Сортировка</a>
   </p>
   <p>
-        <a href="#task1">Задача A. Лестница, Пик или Ничего</a>
-    <br><a href="#task2">Задача B. Кража в магазине</a>
-    <br><a href="#task3">Задача C. Подарки</a>
-    <br><a href="#task4">Задача D. Тройка</a>
-    <br><a href="#task5">Задача E. Честный тренер</a>
-    <br><a href="#task6">Задача F. Массив с нечетной суммой</a>
-    <br><a href="#task7">Задача G. Напитки</a>
-    <br><a href="#task8">Задача H. Кольцевая</a>
-    <br><a href="#task9">Задача I. Сортировка кубов</a>
-    <br><a href="#task10">Задача J. ACM ICPC</a>
-    <br><a href="#task11">Задача K. Влад и столовые</a>
-    <br><a href="#task12">Задача L. Филя и задание</a>
-    <br><a href="#task13">Задача M. Деление на группы</a>
-    <br><a href="#task14">Задача N. Максимизация пересечений (простая версия)</a>
-    <br><a href="#task15">Задача O. Масштабирование</a>
+        <a href="#t1">Задача A. Лестница, Пик или Ничего</a>
+    <br><a href="#t2">Задача B. Кража в магазине</a>
+    <br><a href="#t3">Задача C. Подарки</a>
+    <br><a href="#t4">Задача D. Тройка</a>
+    <br><a href="#t5">Задача E. Честный тренер</a>
+    <br><a href="#t6">Задача F. Массив с нечетной суммой</a>
+    <br><a href="#t7">Задача G. Напитки</a>
+    <br><a href="#t8">Задача H. Кольцевая</a>
+    <br><a href="#t9">Задача I. Сортировка кубов</a>
+    <br><a href="#t10">Задача J. ACM ICPC</a>
+    <br><a href="#t11">Задача K. Влад и столовые</a>
+    <br><a href="#t12">Задача L. Филя и задание</a>
+    <br><a href="#t13">Задача M. Деление на группы</a>
+    <br><a href="#t14">Задача N. Максимизация пересечений (простая версия)</a>
+    <br><a href="#t15">Задача O. Масштабирование</a>
   </p>
 </article>
 
@@ -205,7 +205,7 @@ for (int i = 0; i &lt; n; i++) {
 
 <!-- Задача A. Лестница, Пик или Ничего -->
 <article class="article">
-  <div class="anchor" id="task1"></div>
+  <div class="anchor" id="t1"></div>
   <h3>Задача A. Лестница, Пик или Ничего</h3>
 
   <div><i>Ограничение по времени 1с
@@ -291,7 +291,7 @@ int main() {
 
 <!-- Задача B. Кража в магазине -->
 <article class="article">
-  <div class="anchor" id="task2"></div>
+  <div class="anchor" id="t2"></div>
   <h3>Задача B. Кража в магазине</h3>
 
   <div><i>Ограничение по времени 1с
@@ -380,7 +380,7 @@ int main() {
 
 <!-- Задача C. Подарки -->
 <article class="article">
-  <div class="anchor" id="task3"></div>
+  <div class="anchor" id="t3"></div>
   <h3>Задача C. Подарки</h3>
 
   <div><i>Ограничение по времени 2с
@@ -458,7 +458,7 @@ int main() {
 
 <!-- Задача D. Тройка -->
 <article class="article">
-  <div class="anchor" id="task4"></div>
+  <div class="anchor" id="t4"></div>
   <h3>Задача D. Тройка</h3>
 
   <div><i>Ограничение по времени 1с
@@ -561,7 +561,7 @@ int main() {
 
 <!-- Задача E. Честный тренер -->
 <article class="article">
-  <div class="anchor" id="task5"></div>
+  <div class="anchor" id="t5"></div>
   <h3>Задача E. Честный тренер</h3>
 
   <div><i>Ограничение по времени 2с
@@ -691,7 +691,7 @@ int main() {
 
 <!-- Задача F. Массив с нечетной суммой -->
 <article class="article">
-  <div class="anchor" id="task6"></div>
+  <div class="anchor" id="t6"></div>
   <h3>Задача F. Массив с нечетной суммой</h3>
 
   <div><i>Ограничение по времени 1с
@@ -783,7 +783,7 @@ int main() {
 
 <!-- Задача G. Напитки -->
 <article class="article">
-  <div class="anchor" id="task7"></div>
+  <div class="anchor" id="t7"></div>
   <h3>Задача G. Напитки</h3>
 
   <div><i>Ограничение по времени 2с
@@ -857,7 +857,7 @@ int main() {
 
 <!-- Задача H. Кольцевая -->
 <article class="article">
-  <div class="anchor" id="task8"></div>
+  <div class="anchor" id="t8"></div>
   <h3>Задача H. Кольцевая</h3>
 
   <div><i>Ограничение по времени 2с
@@ -975,7 +975,7 @@ int main() {
 
 <!-- Задача I. Сортировка кубов -->
 <article class="article">
-  <div class="anchor" id="task9"></div>
+  <div class="anchor" id="t9"></div>
   <h3>Задача I. Сортировка кубов</h3>
 
   <div><i>Ограничение по времени 1с
@@ -1124,7 +1124,7 @@ int main() {
 
 <!-- Задача J. ACM ICPC -->
 <article class="article">
-  <div class="anchor" id="task10"></div>
+  <div class="anchor" id="t10"></div>
   <h3>Задача J. ACM ICPC</h3>
 
   <div><i>Ограничение по времени 2с
@@ -1200,7 +1200,7 @@ int main() {
 
 <!-- Задача K. Влад и столовые -->
 <article class="article">
-  <div class="anchor" id="task11"></div>
+  <div class="anchor" id="t11"></div>
   <h3>Задача K. Влад и столовые</h3>
 
   <div><i>Ограничение по времени 2с
@@ -1279,7 +1279,7 @@ int main() {
 
 <!-- Задача L. Филя и задание -->
 <article class="article">
-  <div class="anchor" id="task12"></div>
+  <div class="anchor" id="t12"></div>
   <h3>Задача L. Филя и задание</h3>
 
   <div><i>Ограничение по времени 1с
@@ -1406,7 +1406,7 @@ int main() {
 
 <!-- Задача M. Деление на группы -->
 <article class="article">
-  <div class="anchor" id="task13"></div>
+  <div class="anchor" id="t13"></div>
   <h3>Задача M. Деление на группы</h3>
 
   <div><i>Ограничение по времени 4с
@@ -1524,7 +1524,7 @@ int main() {
 
 <!-- Задача N. Максимизация пересечений (простая версия) -->
 <article class="article">
-  <div class="anchor" id="task14"></div>
+  <div class="anchor" id="t14"></div>
   <h3>Задача N. Максимизация пересечений (простая версия)</h3>
 
   <div><i>Ограничение по времени 1с
@@ -1683,7 +1683,7 @@ int main() {
 
 <!-- Задача O. Масштабирование -->
 <article class="article">
-  <div class="anchor" id="task15"></div>
+  <div class="anchor" id="t15"></div>
   <h3>Задача O. Масштабирование</h3>
 
   <div><i>Ограничение по времени 1с
@@ -1824,4 +1824,3 @@ int main() {
 </pre>
   </details>
 </article>
-
