--- a/src/components/front/front-node/pages/elem-axios.html
+++ b/src/components/front/front-node/pages/elem-axios.html
@@ -1,27 +1,20 @@
 <h1>Axios</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
+  <h3>Содержание</h3>
 
-  <div>
-    <p><a href="#about">about</a></p>
-    <p><a href="#links">links</a></p>
-    <p><a href="#install">install</a></p>
-  </div>
-
-</div>
+      <a href="#about">about</a>
+  <br><a href="#links">links</a>
+  <br><a href="#install">install</a>
+</article>
 
 
 <!-- about -->
 <article class="article">
   <div class="anchor" id="about"></div>
-  <h2>about</h2>
+  <h3>About</h3>
 
   <p>Axios - это HTTP-клиент, основанный на Promise для node.js и браузера. Он изоморфный (= он может работать в браузере и node.js с той же базой кодов). На стороне сервера он использует нативный node.js http-модуль, тогда как на стороне клиента (браузер) он использует XMLHttpRequests.</p>
 </article>
@@ -30,7 +23,7 @@
 <!-- links -->
 <article class="article">
   <div class="anchor" id="links"></div>
-  <h2>Ссылки</h2>
+  <h3>Ссылки</h3>
 
   <p><a href="https://github.com/axios/axios">https://github.com/axios/axios</a></p>
   <p><a href="https://axios-http.com/ru/">https://axios-http.com/ru/</a></p>
@@ -46,7 +39,7 @@
 <!-- inatall -->
 <article class="article">
   <div class="anchor" id="install"></div>
-  <h2>Установка</h2>
+  <h3>Установка Axios</h3>
 
   <h3>Подключение через &lt;script&gt;</h3>
   <p><a href="https://axios-http.com/ru/docs/intro">https://axios-http.com/ru/docs/intro</a></p>
