--- a/src/components/front/front-node/pages/elem-tailwind.html
+++ b/src/components/front/front-node/pages/elem-tailwind.html
@@ -1,34 +1,27 @@
 <h1>Tailwind</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<div class="article">
+  <h3>Содержание</h3>
 
-  <div>
-    <p><a href="#about">about</a></p>
-    <p><a href="#links">links</a></p>
-    <p><a href="#install">install</a></p>
-  </div>
-
+      <a href="#about">about</a>
+  <br><a href="#links">links</a>
+  <br><a href="#install">install</a>
 </div>
 
 
 <!-- about -->
 <article class="article">
   <div class="anchor" id="about"></div>
-  <h2>about</h2>
+  <h3>about</h3>
 </article>
 
 
 <!-- links -->
 <article class="article">
   <div class="anchor" id="links"></div>
-  <h2>links</h2>
+  <h3>links</h3>
 
   <p><a href="https://tailwindcss.ru/">https://tailwindcss.ru/</a></p>
   <p><a href="https://v2.tailwindcss.ru/">https://v2.tailwindcss.ru/</a></p>
@@ -46,10 +39,11 @@
 <!-- install -->
 <article class="article">
   <div class="anchor" id="install"></div>
-  <h2>install</h2>
-  
-  <p>Сохраните файл стилей tailwind.css в папке с проектом и подключите его в index.html</p> 
+  <h3>Установка Tailwind</h3>
+
+  <p>Сохраните файл стилей tailwind.css в папке с проектом и подключите его в index.html</p>
   <code>&lt;link href="tailwind.css" rel="stylesheet"&gt;</code>
+
   <p>или подключите файл стилей tailwind.css через cdn </p>
   <code> &lt;link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"&gt;</code>
 </article>
