--- a/src/components/front/front-node/pages/elem-webpack.html
+++ b/src/components/front/front-node/pages/elem-webpack.html
@@ -3,18 +3,18 @@
 
 <!-- Содержание -->
 <article class="article">
-  <h2>Содержание</h2>
+  <h3>Содержание</h3>
 
-  <p><a href="#about">about</a></p>
-  <p><a href="#links">links</a></p>
-  <p><a href="#install">install</a></p>
+      <a href="#about">about</a>
+  <br><a href="#links">links</a>
+  <br><a href="#install">install</a>
 </article>
 
 
 <!-- about -->
 <article class="article">
   <div class="anchor" id="about"></div>
-  <h2>about</h2>
+  <h3>about</h3>
 
   <p>Webpack — это статический сборщик модулей JavaScript в единый JS-файл (инструмент, позволяющий скомпилировать несколько модулей в один файл), содержащий все необходимое для запуска приложения.</p>
   <p>Webpack применяют как при frontend, так и в backend разработке на Node.js. Он анализирует модули приложения, создает на основе операторов import и/или require() граф зависимостей модулей и собирает модули в правильном порядке в один или более бандл (bundle, узел), на который может ссылаться файл index.html.</p>
@@ -37,7 +37,7 @@
 <!-- links -->
 <article class="article">
   <div class="anchor" id="links"></div>
-  <h2>links</h2>
+  <h3>links</h3>
 
   <p><a href="https://webpack.js.org/">https://webpack.js.org/</a></p>
 
