--- a/src/components/front/front-node/pages/elem-node.html
+++ b/src/components/front/front-node/pages/elem-node.html
@@ -1,26 +1,22 @@
 <h1>Node</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="contents"></div>
-  <h2>Содержание</h2>
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
 
-
-  <!-- Содержание -->
-  <div class="article__contents">
-    <a href="#about" class="contents__link">about</a>
-    <a href="#links" class="contents__link">links</a>
-    <a href="#install" class="contents__link">install</a>
-    <a href="#project" class="contents__link">Создание нового проекта</a>
-    <a href="#npm" class="contents__link">npm</a>
-  </div>
-</div>
+      <a href="#about">about</a>
+  <br><a href="#links">links</a>
+  <br><a href="#install">install</a>
+  <br><a href="#project">Создание нового проекта</a>
+  <br><a href="#npm">Глобальная и локальная установка npm пакетов</a>
+</article>
 
 
 <!-- about -->
 <article class="article">
   <div class="anchor" id="about"></div>
   <h3>About</h3>
+
   <p>Node.js is a JavaScript runtime built on Chrome's V8 JavaScript engine.</p>
 </article>
 
@@ -29,6 +25,7 @@
 <article class="article">
   <div class="anchor" id="links"></div>
   <h3>Ссылки</h3>
+
   <p><a href="https://nodejs.org/en/">https://nodejs.org/en/</a></p>
 </article>
 
